<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create3_coverage</name>
  <version>0.0.1</version>
  <description>C++ action server exposing a non-systematic coverage behavior</description>
  <maintainer email="asoragna@irobot.com">Alberto Soragna</maintainer>
  <maintainer email="jkearns@irobot.com">Justin Kearns</maintainer>
  <license>BSD</license>
  <author email="asoragna@irobot.com">Alberto Soragna</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>create3_examples_msgs</depend>
  <depend>irobot_create_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>