<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create3_lidar</name>
  <version>0.0.1</version>
  <description>Example for using an RPLIDAR A1 with a Create 3</description>
  <maintainer email="asoragna@irobot.com">Alberto Soragna</maintainer>
  <maintainer email="jkearns@irobot.com">Justin Kearns</maintainer>
  <maintainer email="sshamlian@irobot.com">Steven Shamlian</maintainer>

  <license>BSD</license>

  <depend>irobot_create_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
