<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create3_teleop</name>
  <version>0.0.1</version>
  <description>Example launch files for teleoperating the iRobot(R) Create(R) 3 Educational Robot.</description>
  <maintainer email="asoragna@irobot.com">Alberto Soragna</maintainer>
  <license>BSD</license>

  <exec_depend>joy</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
